Fix button bug by adding Z-index to buttons

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@
     display: flex;
     gap: 10px;
     align-items: start;
+    z-index: 3;
 }
 
 #buttonbox button {
